--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script>
+      setTimeout(function() {
+        document.title = "One new message";
+      }, 3000);
+    </script>
     <meta charset="UTF-8" />
-    <title>HTML, CSS and SASS Boilerplate</title>
+    <title>No new messages</title>
     <meta
       name="description"
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
